Adjusted bomb/banner to overlap in the correct sequence, and adjusted the BG behind them to be the 'page background' so the nav-bar is more of a nav-ribbon.

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 	text-align: justify;
 	margin: 0 0 0 0.5em;
 	padding: 2em 1em 3em 10em;
-	margin-top: 128px;
+	margin-top: 96px;
 	background: #202020;
 	color: #ddd;
 	min-width: 32em;
@@ -76,15 +76,16 @@ a:active,
 header {
 	text-align: left;
 	position: fixed;
-	top: 2em;
-	left: 0em;
+	top: 96px;
+	left: 0;
 	bottom: 10em;
 	width: 10em;
 	overflow: auto;
 	background: #181818;
 	margin: 0;
 	padding: 0;
-	margin-top: 128px;
+	padding-top: 64px;
+	z-index: -2;
 }
 
 table.image {
@@ -100,23 +101,24 @@ table.image caption {
 	caption-side: bottom;
 }
 
-#logo:before {
-	content: "";
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 191px;
-	height: 160px;
-	background: url(fbomb.png);
-}
-
 #logo {
 	position: fixed;
-	top: 0;
-	left: 191px;
-	right: 0;
-	height: 128px;
+	left: 96px;
+	top: 16px;
+	width: 100%;
+	height: 96px;
 	background-repeat: no-repeat;
+	z-index: 10;
+}
+
+#bomb {
+	position: fixed;
+	content: url(fbomb.png);
+	top: 0;
+	left: -31px;
+	width: 191px;
+	height: 160px;
+	z-index: 5;
 }
 
 #tail {
@@ -129,7 +131,6 @@ table.image caption {
 	border-radius: 0 0 10em 0;
 	-moz-border-radius: 0 0 10em 0;
 	-webkit-border-radius: 0 0 10em 0;
-	z-index: -1;
 }
 
 #tail img {
@@ -204,6 +205,7 @@ table.image caption {
 
 nav {
 	overflow: hidden;
+	border-top: 96px solid #181818;
 	background: black;
 	display: block;
 	position: fixed;
@@ -212,9 +214,7 @@ nav {
 	right: 0;
 	min-height: 2em;
 	padding: 0 0 0 10em;
-	padding-top: 128px;
 	vertical-align: middle;
-	z-index: 10;
 }
 
 #navmenu {
